tests/NormalTests/paczka1/small_fuzzy/27775608.err
Error in line 12: C9HWAbYbrl S280 -3,9
Error in line 9: F1bdIWBf A862 35,6
